# Header files need not be enumerated
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${PROJECT_BINARY_DIR})

###########
# LIB SPATH #
###########

# Install header files
LIST(APPEND libspath_install_headers
	spath.h
	spath_util.h
)
IF(MPI)
    LIST(APPEND libspath_install_headers spath_mpi.h)
ENDIF(MPI)
INSTALL(FILES ${libspath_install_headers} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

LIST(APPEND libspath_noMPI_srcs
    spath.c
    spath_util.c
)
LIST(APPEND libspath_srcs
    spath.c
    spath_util.c
)
IF(MPI)
    LIST(APPEND libspath_srcs spath_mpi.c)
ENDIF(MPI)


# SPATH Library
ADD_LIBRARY(spath_o OBJECT ${libspath_srcs})

ADD_LIBRARY(spath SHARED $<TARGET_OBJECTS:spath_o>)
TARGET_LINK_LIBRARIES(spath ${SPATH_EXTERNAL_LIBS})
SET_TARGET_PROPERTIES(spath PROPERTIES OUTPUT_NAME spath CLEAN_DIRECT_OUTPUT 1)
INSTALL(TARGETS spath DESTINATION ${CMAKE_INSTALL_LIBDIR})

ADD_LIBRARY(spath-static STATIC $<TARGET_OBJECTS:spath_o>)
IF(SPATH_LINK_STATIC)
        SET_TARGET_PROPERTIES(spath-static PROPERTIES LINK_SEARCH_START_STATIC 1)
        SET_TARGET_PROPERTIES(spath-static PROPERTIES LINK_SEARCH_END_STATIC 1)
ENDIF(SPATH_LINK_STATIC)
TARGET_LINK_LIBRARIES(spath-static ${SPATH_EXTERNAL_LIBS})

SET_TARGET_PROPERTIES(spath-static PROPERTIES OUTPUT_NAME spath CLEAN_DIRECT_OUTPUT 1)
INSTALL(TARGETS spath-static DESTINATION ${CMAKE_INSTALL_LIBDIR})

# SPATH Library
ADD_LIBRARY(spath_base_o OBJECT ${libspath_noMPI_srcs})

ADD_LIBRARY(spath_base SHARED $<TARGET_OBJECTS:spath_base_o>)
TARGET_LINK_LIBRARIES(spath_base ${SPATH_SERIAL_LIBS})
SET_TARGET_PROPERTIES(spath_base PROPERTIES OUTPUT_NAME spath_base CLEAN_DIRECT_OUTPUT 1)
INSTALL(TARGETS spath_base DESTINATION ${CMAKE_INSTALL_LIBDIR})

ADD_LIBRARY(spath_base-static STATIC $<TARGET_OBJECTS:spath_base_o>)
IF(SPATH_LINK_STATIC)
        SET_TARGET_PROPERTIES(spath_base-static PROPERTIES LINK_SEARCH_START_STATIC 1)
        SET_TARGET_PROPERTIES(spath_base-static PROPERTIES LINK_SEARCH_END_STATIC 1)
ENDIF(SPATH_LINK_STATIC)
TARGET_LINK_LIBRARIES(spath_base-static ${SPATH_SERIAL_LIBS})

SET_TARGET_PROPERTIES(spath_base-static PROPERTIES OUTPUT_NAME spath_base CLEAN_DIRECT_OUTPUT 1)
INSTALL(TARGETS spath_base-static DESTINATION ${CMAKE_INSTALL_LIBDIR})
